--- a/fly.toml
+++ b/fly.toml
@@ -1,20 +1,23 @@
-app = "friday-discord-bot"
-primary_region = "fra"
+# fly.toml app configuration file generated for friday-discord-bot on 2025-12-19T18:47:28Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'friday-discord-bot'
+primary_region = 'fra'
 
 [build]
-
-[env]
-  NODE_ENV = "production"
-  PORT = "5000"
 
 [http_service]
   internal_port = 5000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
+  memory_mb = 1024
